# gitea-downloader

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: project_ci.yml
gitea_downloader/: __init__.py  download_utils.py  hash_utils.py  logger_utils.py
radium_assignment/: download_utils.py  main.py
tests/: __init__.py  conftest.py  constants.py  fixtures.py  mocks.py  test_download_utils.py  test_hash_utils.py
