[tool.poetry]
name = "radium-assignment"
version = "0.1.0"
description = ""
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"
packages = [{include = "radius_assignment"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
